[metadata]
name = imphot
description = Determine the photometric parameters of individual MUSE images
long_description = file: README.md
url = https://github.com/musevlt/imphot
author = Martin Shepherd
keywords = astronomy, astrophysics, science, muse, vlt
license = MIT License
license_file = LICENSE
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
zip_safe = False
install_requires = mpdaf; lmfit
include_package_data = True
python_requires = >=3.7

[options.entry_points]
console_scripts =
    fit_photometry = imphot.programs:fit_photometry_main
    make_wideband_image = imphot.programs:make_wideband_image_main
    regrid_hst_to_muse = imphot.programs:regrid_hst_to_muse_main

[options.extras_require]
docs =
    sphinx
    sphinx_rtd_theme
    sphinx_automodapi
    numpydoc
    matplotlib
